Move to railway and containers

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <meta property="og:title" content="Updraft — Your Year on Bluesky, Lifted" />
     <meta property="og:description" content="A beautiful year-in-review experience for Bluesky. See what you posted, what resonated, and how your corner of the network evolved." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://updraft.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@matty.wtf" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://updraft.app/og-image.png" />
     
     <link rel="canonical" href="https://updraft.app" />
   </head>
