--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,10 @@
     <meta name="twitter:image" content="https://www.updraft-app.com/og-image.png" />
     
     <link rel="canonical" href="https://www.updraft-app.com" />
+    
+    <!-- Plausible Analytics -->
+    <!-- Replace 'updraft-app.com' with your actual domain after signing up at https://plausible.io -->
+    <script defer data-domain="updraft-app.com" src="https://plausible.io/js/script.js"></script>
   </head>
 
   <body>
